============================
- Port to kotext
- New effect : kpresenter can play sounds
- Thumbnail mode for the sidebar
- Add notebar
- Add a real statusbar
- Add New Tool : freehand, polyline, quadric bezier curve, cubic bezier curve, convex/concave polygon
- Add zoom support
- Improve undo/redo (now we can undo/redo "insert new page"/"delete page"/"paste page"/"Duplicate page")
- Now kpresenter has real page
- Limit position/size object to page
- spell checking/search/find works on all page
- Add "Show Presentation Duration"
- Add dcop interface : now we can insert text, change text format, etc...
- Add support for style
- Add support for background spell checking
- Add support for manual completion (use CTRL + E )
- Add Help line
- New transition effect: Blinds, Box In/Out, Checkboard, Cover, Uncover, Dissolve, Random,...
- Add grid support
- Add Help Point
- Add support to change zoom with mouse (zoom selected area)
- Add Configure Picture Dialog


KPresenter 1.2beta1 -> 1.2 beta 2
---------------------------------
- Add support for flip polyline object
- Add support for "protect size and postion"
- When we create a line object and we press shift we draw horizontal/vertical
- Add support for dnd between "text object"
- Add support for "keep ratio" in obj
- Add "duplicate object" dialogbox
- Add "Apply AutoFormat"
- Add new type of begin/end line (line arrow, Dimension line... )
- Add support for find/replace with format
- Now we can create directly a style from a selection
- Add support for protect content of text object
- Now we can close polyline object
- Fix save/load variable
- Use tripleState in styledia
- Removed settings-toolbar and corresponding menu-entries
- Added tab to properties-dialog according to selected object
- Moved default-settings for rectangles, pies and polygons to
  'Settings' -> 'Configure KPresenter'
- Now we can change grid color
- Add option to "Snap to grid"
- Add support for text object margins
- Improve font style